--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<link rel="icon" type="image/png" href="/favicon.ico?" />
+	<link rel="icon" type="image/png" href="favicon.ico?" />
 
 	<script src="lib/react.development.js"></script>
 	<script src="lib/react-dom.development.js"></script>
